---
config:
  layout: elk
---
classDiagram
direction TB

class System {
    + startRoomInspection(booking_id : String)
    + confirmInspectionComplete(booking_id : String, damaged : Boolean)
    + addDamage(booking_id : String, damage_id : String, description : String, price : float)
}

class Booking {
    - booking_id : String
    - status : String
    - residencebooking_list : List~ResidenceBooking~
    - damage_list : List~DamageItem~
    + get_booking_item(booking_id : String)
    + update_status(status : String)
    + add_damage(damage_id : String, description : String, price : float)
}

class ResidenceBooking {
    - residence_booking_id : String
    - room : Room
    + get_detail()
    + start_room_check()
}

class Room {
    - room_id : String
    - status : String
    + update_status(status : String)
}

class DamageItem {
    - damage_id : String
    - description : String
    - price : float
}

%% ---------------- Relationships ----------------

System --> Booking

Booking "1" *-- "1..*" ResidenceBooking
Booking "1" *-- "0..*" DamageItem
ResidenceBooking "1" --> "1" Room